--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -41,45 +41,48 @@
   </nav>
 </header>-->
 
-<md-sidenav-container class="demo-root" fullscreen>
-  <md-sidenav #start>
+
+<md-toolbar color="primary">
+  <button md-icon-button (click)="toggleSideNav()">
+        <md-icon class="md-24">menu</md-icon>
+      </button>
+  <div class="demo-toolbar">
+    <h1>Sample</h1>
+  </div>
+
+  <button md-icon-button [mdMenuTriggerFor]="menu"> <md-icon>more_vert</md-icon></button>
+  <md-menu #menu="mdMenu">
+    <button md-menu-item>
+    <md-icon>dialpad</md-icon>
+    <span>Redial</span>
+  </button>
+    <button md-menu-item disabled>
+    <md-icon>voicemail 2</md-icon>
+    <span>Check voicemail</span>
+  </button>
+    <button md-menu-item>
+    <md-icon>notifications_off</md-icon>
+    <span>Disable alerts</span>
+  </button>
+  </md-menu>
+</md-toolbar>
+
+<md-sidenav-container class="demo-root">
+  <md-sidenav #sidenav>
     <md-nav-list>
-      <a *ngFor="let navItem of navItems" md-list-item (click)="start.close()" [routerLink]="[navItem.route]">
+      <a *ngFor="let navItem of navItems" md-list-item (click)="sidenav.close()" [routerLink]="[navItem.route]">
         {{navItem.name}}
       </a>
 
       <hr>
 
-      <a md-list-item (click)="start.close()" [routerLink]="['baseline']">
+      <a md-list-item (click)="sidenav.close()" [routerLink]="['baseline']">
         Baseline
       </a>
     </md-nav-list>
-    <button md-button (click)="start.close()">CLOSE</button>
+    <button md-button (click)="sidenav.close()">CLOSE</button>
   </md-sidenav>
 
-  <md-toolbar color="primary">
-    <button md-icon-button (click)="start.open()">
-        <md-icon class="md-24">menu</md-icon>
-      </button>
-    <div class="demo-toolbar">
-      <h1>Sample</h1>
-    </div>
 
-    <button md-icon-button [mdMenuTriggerFor]="menu"> <md-icon>more_vert</md-icon></button>
-    <md-menu #menu="mdMenu">
-      <button md-menu-item>
-    <md-icon>dialpad</md-icon>
-    <span>Redial</span>
-  </button>
-      <button md-menu-item disabled>
-    <md-icon>voicemail 2</md-icon>
-    <span>Check voicemail</span>
-  </button>
-      <button md-menu-item>
-    <md-icon>notifications_off</md-icon>
-    <span>Disable alerts</span>
-  </button>
-    </md-menu>
-  </md-toolbar>
 
 </md-sidenav-container>
