basic layout done

--- a/src/app/base/header/header.component.html
+++ b/src/app/base/header/header.component.html
@@ -1,4 +1,8 @@
 <md-toolbar color="primary">
-    <md-icon (click)='toggleSidenav() '>menu</md-icon>
+    <!--<md-icon (click)='toggleSidenav() '>menu</md-icon>-->
+
+    <button class="hamburger mat-button" md-button (click)="toggleSidenav()">
+        <md-icon>menu</md-icon>
+      </button>
     <span>Default Toolbar</span>
 </md-toolbar>
