--- a/src/app/base/sidebar/sidebar.component.html
+++ b/src/app/base/sidebar/sidebar.component.html
@@ -1,5 +1,6 @@
 <md-sidenav-container>
-    <md-sidenav #sidenav mode="side" opened="true">
+
+    <md-sidenav #sidenav mode="side" opened="{{!isMobile}}">
         Jolly good!
     </md-sidenav>
 
